Run code analysis and fix issues

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,11 @@
 Documentation:
   Enabled: false
+AllCops:
+  Exclude:
+    - lib/tasks/**/*
+    - db/**/*
+    - config/**/*
+    - bin/**/*
 Layout/SpaceBeforeFirstArg:
   Exclude:
     - app/views/api/**/**/*
@@ -13,10 +19,6 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   CountComments: false  # count full line comments?
   Max: 25
-  Exclude:
-    - config/**/*
-    - spec/**/*
-    - app/admin/**/*
 Metrics/BlockNesting:
   Max: 4
 Metrics/ClassLength:
