Add vendor to rubocop's excluded

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
     - db/**/*
     - config/**/*
     - bin/**/*
+    - vendor/**/*
 Layout/SpaceBeforeFirstArg:
   Exclude:
     - app/views/api/**/**/*
