--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -53,3 +53,5 @@ Style/ModuleFunction:
   Enabled: false
 Style/BlockDelimiters:
   EnforcedStyle: braces_for_chaining
+Rails/EnumHash:
+  Enabled: true
