Exclude admin files for rubocop's block length

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,7 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   Exclude:
     - spec/**/*
+    - app/admin/**/*
   CountComments: false  # count full line comments?
   Max: 25
 Metrics/BlockNesting:
