--- a/spec/fixtures/approvals/updated_user.approved.json
+++ b/spec/fixtures/approvals/updated_user.approved.json
@@ -2,7 +2,7 @@
   "status": "success",
   "data": {
     "gender": "male",
-    "name": "Jane Doe",
+    "name": "John Doe",
     "email": "<sequence>",
     "uid": "<sequence>",
     "id": "<id>",
